--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ name: CI
 on:
   push:
     branches:
-      - main
+      - '*'
   pull_request:
     branches:
       - main
@@ -46,3 +46,26 @@ jobs:
       - run: yarn install --frozen-lockfile --silent
 
       - run: yarn lint
+  
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install ripgrep
+        run: sudo apt-get install -y ripgrep
+
+      - name: Get apk
+        run: |
+          curl -L \
+          https://github.com/bitbar/test-samples/raw/master/apps/android/bitbar-sample-app.apk \
+          -o app.apk
+
+      - name: NowSecure
+        uses: ./
+        timeout-minutes: 90
+        with:
+          token: ${{ secrets.NS_TOKEN }}
+          app_file: app.apk
+          group_id: ${{ secrets.NS_GROUP_ID }}
